fix: display of categories-list__link on mobile screens

--- a/src/assets/styles/_media.scss
+++ b/src/assets/styles/_media.scss
@@ -9,13 +9,23 @@
     }
 }
 
+@media screen and (max-width: 1024px) {
+    .products__categories-list {
+        .categories-list__item.active {
+            .categories-list__link {
+                font-size: 24px;
+            }
+        }
+    }
+}
+
 @media screen and (max-width: 675px) {
     .products__categories-list {
         flex-direction: column;
         align-items: flex-start;
     }
 
-    .products {
+    .products__categories-list {
         .categories-list__item {
             &:not(:last-child) {
                 margin: 0 0 10px 0;
@@ -32,6 +42,14 @@
     .product-card__counter {
         margin: 0 0 10px 0;
         justify-content: center;
+    }
+
+    .products__categories-list {
+        .categories-list__item.active {
+            .categories-list__link {
+                font-size: 20px;
+            }
+        }
     }
 }
 
